@@ -1,0 +1,9 @@
+Title: Fixed rendering of perfometers when no RRDs exist yet
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i4
+Date: 1484828434
+Class: fix
+
+
